style(line-managener): fix too long line names looked weird (RDA-13)

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -51,3 +51,9 @@
 .ov-auto {
   overflow: auto;
 }
+
+.text-ellipses {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
